--- a/metadata.yaml
+++ b/metadata.yaml
@@ -53,5 +53,6 @@ subjects:
 - !lcsh 'Gentry -- England -- Fiction'
 - !lcsh 'England -- Fiction'
 - !lcsh 'Regency fiction'
+- GITenberg
 title: Raison et sensibilité, ou les deux manières d'aimer (Tome 2)
 url: http://www.gutenberg.org/ebooks/35151
